--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[project]
+source .venv/bin/activate[project]
 name = "amsterdam-housing-price-prediction"
 version = "0.1.0"
 description = "Add your description here"
