--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
-source .venv/bin/activate[project]
+[project]
 name = "amsterdam-housing-price-prediction"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "notebook>=7.4.7",
+]
