--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.14"
 dependencies = [
     "notebook>=7.4.7",
     "pandas>=2.3.3",
+    "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
 ]
