--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "fastapi>=0.121.2",
     "notebook>=7.4.7",
     "pandas>=2.3.3",
+    "pydantic>=2.12.4",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "tqdm>=4.67.1",
+    "uvicorn>=0.38.0",
     "xgboost>=3.1.1",
 ]
